--- a/seniorDesign/Views/Add/Add.cshtml
+++ b/seniorDesign/Views/Add/Add.cshtml
@@ -5,15 +5,23 @@
 }
 
 @{
-   
+
     var db = Database.Open("gen-provider-dbConnectionString");
     var Org = Request.Form["Org"];
     var Phone = Request.Form["Phone"];
     var Email = Request.Form["Email"];
     var Street = Request.Form["Street"];
-    var County = Request.Form["County"];
-    var Country = Request.Form["Country"];
-    var Postal = Request.Form["Postal"];
+    var Fax = Request.Form["Fax"];
+    var Facebook = Request.Form["Facebook"];
+    var Google = Request.Form["Google"];
+    var Youtube = Request.Form["Youtube"];
+    var Instagram = Request.Form["Instagram"];
+    var Pinterest = Request.Form["Pinterest"];
+    var CharityNavigator = Request.Form["CharityNavigator"];
+    var Linkedin = Request.Form["Linkedin"];
+    var Vimeo = Request.Form["Vimeo"];
+    var Guidestar = Request.Form["Guidestar"];
+    var Twitter = Request.Form["Twitter"];
     var Services = Request.Form["Services"];
     var Type = Request.Form["Type"];
     var InfoSource = true;
@@ -23,12 +31,19 @@
 
     if (IsPost && Org != null)
     {
+        try
+        {
+            var insertQuery = "INSERT INTO Main_Database_For_Directory (Organization, PhoneNumber, Email, StreetAddress, Fax, Facebook, Google, Youtube, Instagram, Pinterest, CharityNavigator, Linkedin, Vimeo, Guidestar, Twitter, ServicesOffered, TypeOfOrganization, InformationSource, ApprovedForDirectory) " +
+                "VALUES (@0, @1, @2, @3, @4, @5, @6, @7, @8, @9, @10, @11, @12, @13, @14, @15, @16, @17, @18)";
+            db.Execute(insertQuery, Org, Phone, Email, Street, Fax, Facebook, Google, Youtube, Instagram, Pinterest, CharityNavigator, Linkedin, Vimeo, Guidestar, Twitter, Services, Type, InfoSource, Approved);
 
-        var insertQuery = "INSERT INTO Main_Database_For_Directory (Organization, PhoneNumber, Email, StreetAddress, County, Country, PostalCode, ServicesOffered, TypeOfOrganization, InformationSource, ApprovedForDirectory) " +
-            "VALUES (@0, @1, @2, @3, @4, @5, @6, @7, @8, @9, @10)";
-        db.Execute(insertQuery, Org, Phone, Email, Street, County, Country, Postal, Services, Type, InfoSource, Approved);
+            Response.Redirect("~/Add/Add");
+        }
+        catch(Exception ex)
+        {
+            Response.Write("<script>alert('Something went wrong.\\nSome fields may be filled in incorrectly.')</script>");
 
-        Response.Redirect("~/Add/Add");
+        }
 
     }
 }
@@ -42,7 +57,7 @@
 </style>
 <div class="jumbotron">
     <h2>Add Providers </h2>
-    <p class="lead">Manually add or edit providers.</p>
+    <p class="lead">Manually add providers.</p>
 </div>
 
 
@@ -70,16 +85,48 @@
                 <div class="col-md-8"><input class="form-control" name="Street" type="text" size="100" value="@Street" /></div>
             </div>
             <div class="col-md-12">
-                <div class=" col-md-offset-1 col-md-2"><label>County:</label></div>
-                <div class="col-md-8"><input class="form-control" name="County" type="text" size="100" value="@County" /></div>
+                <div class=" col-md-offset-1 col-md-2"><label>Fax:</label></div>
+                <div class="col-md-8"><input class="form-control" name="Fax" type="text" size="100" value="@Fax" /></div>
             </div>
             <div class="col-md-12">
-                <div class=" col-md-offset-1 col-md-2"><label>Country:</label></div>
-                <div class="col-md-8"><input class="form-control" name="Country" type="text" size="100" value="@Country" /></div>
+                <div class=" col-md-offset-1 col-md-2"><label>Facebook:</label></div>
+                <div class="col-md-8"><input class="form-control" name="Facebook" type="text" size="100" value="@Facebook" /></div>
             </div>
             <div class="col-md-12">
-                <div class=" col-md-offset-1 col-md-2"><label>Postal Code:</label></div>
-                <div class="col-md-8"><input class="form-control" name="Postal" type="text" size="100" value="@Postal" /></div>
+                <div class=" col-md-offset-1 col-md-2"><label>Google:</label></div>
+                <div class="col-md-8"><input class="form-control" name="Google" type="text" size="100" value="@Google" /></div>
+            </div>
+            <div class="col-md-12">
+                <div class=" col-md-offset-1 col-md-2"><label>Youtube:</label></div>
+                <div class="col-md-8"><input class="form-control" name="Youtube" type="text" size="100" value="@Youtube" /></div>
+            </div>
+            <div class="col-md-12">
+                <div class=" col-md-offset-1 col-md-2"><label>Instagram:</label></div>
+                <div class="col-md-8"><input class="form-control" name="Instagram" type="text" size="100" value="@Instagram" /></div>
+            </div>
+            <div class="col-md-12">
+                <div class=" col-md-offset-1 col-md-2"><label>Pinterest:</label></div>
+                <div class="col-md-8"><input class="form-control" name="Pinterest" type="text" size="100" value="@Pinterest" /></div>
+            </div>
+            <div class="col-md-12">
+                <div class=" col-md-offset-1 col-md-2"><label>Charity Navigator:</label></div>
+                <div class="col-md-8"><input class="form-control" name="CharityNavigator" type="text" size="100" value="@CharityNavigator" /></div>
+            </div>
+            <div class="col-md-12">
+                <div class=" col-md-offset-1 col-md-2"><label>Linkedin:</label></div>
+                <div class="col-md-8"><input class="form-control" name="Linkedin" type="text" size="100" value="@Linkedin" /></div>
+            </div>
+            <div class="col-md-12">
+                <div class=" col-md-offset-1 col-md-2"><label>Vimeo:</label></div>
+                <div class="col-md-8"><input class="form-control" name="Vimeo" type="text" size="100" value="@Vimeo" /></div>
+            </div>
+            <div class="col-md-12">
+                <div class=" col-md-offset-1 col-md-2"><label>Guidestar:</label></div>
+                <div class="col-md-8"><input class="form-control" name="Guidestar" type="text" size="100" value="@Guidestar" /></div>
+            </div>
+            <div class="col-md-12">
+                <div class=" col-md-offset-1 col-md-2"><label>Twitter:</label></div>
+                <div class="col-md-8"><input class="form-control" name="Twitter" type="text" size="100" value="@Twitter" /></div>
             </div>
             <div class="col-md-12">
                 <div class=" col-md-offset-1 col-md-2"><label>Services Offered:</label></div>
