--- a/seniorDesign/Views/Delete/Delete.cshtml
+++ b/seniorDesign/Views/Delete/Delete.cshtml
@@ -5,16 +5,16 @@
 
 @{
     var db = Database.Open("gen-provider-dbConnectionString");
-    var Org = Request.QueryString["param1"];
-    if (Org.IsEmpty())
+    var OrgID = Request.QueryString["param1"];
+    if (OrgID.IsEmpty())
     {
         Response.Redirect("~/List/List");
     }
-    var row = db.QuerySingle("SELECT * FROM Main_Database_For_Directory WHERE Organization = @0", Org);
-    if (IsPost && !Org.IsEmpty())
+    var row = db.QuerySingle("SELECT * FROM Main_Database_For_Directory WHERE OrgID = @0", OrgID);
+    if (IsPost && !OrgID.IsEmpty())
     {
-        var deleteQueryString = "DELETE FROM Main_Database_For_Directory WHERE Organization=@0";
-        db.Execute(deleteQueryString, Org);
+        var deleteQueryString = "DELETE FROM Main_Database_For_Directory WHERE OrgID=@0";
+        db.Execute(deleteQueryString, OrgID);
         Response.Redirect("~/List/List");
     }
 }
@@ -33,11 +33,9 @@
         <p style="border:1px solid black; padding: 5px; font-size: 16px;">
             <b>Organization Name:</b> @row.Organization <br />
             <b>Phone:</b> @row.PhoneNumber <br />
+            <b>Fax:</b> @row.Fax <br />
             <b>Email:</b> @row.Email <br />
-            <b>Street Address:</b> @row.StreetAddress <br />
-            <b>County:</b> @row.County <br />
-            <b>Country:</b> @row.Country <br />
-            <b>Postal Code:</b> @row.PostalCode <br />
+            <b>Address:</b> @row.StreetAddress <br />
             <b>Services Offered:</b> @row.ServicesOffered <br />
             <b>Type of Organization:</b> @row.TypeOfOrganization 
         </p>
