--- a/seniorDesign/Views/Edit/Edit.cshtml
+++ b/seniorDesign/Views/Edit/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WebMatrix.Data;
+
 @{
     ViewBag.Title = "GEN Provider Directory";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -7,20 +8,29 @@
 @{
 
     var db = Database.Open("gen-provider-dbConnectionString");
-    
-    var Org = Request.QueryString["param1"];
+
+    var OrgID = Request.QueryString["param1"];
+    var Organization = "";
     var Phone = "";
     var Email = "";
     var Street = "";
-    var County = "";
-    var Country = "";
-    var Postal = "";
+    var Fax = "";
+    var Facebook = "";
+    var Google = "";
+    var Youtube = "";
+    var Instagram = "";
+    var Pinterest = "";
+    var CharityNavigator = "";
+    var Linkedin = "";
+    var Vimeo = "";
+    var Guidestar = "";
+    var Twitter = "";
     var Services = "";
     var Type = "";
     //var InfoSource = true;
     //var Approved = true;
 
-    if (Org.IsEmpty())
+    if (OrgID.IsEmpty())
     {
         Response.Redirect("~/List/List");
     }
@@ -30,29 +40,58 @@
     if (IsPost)
     {
         var updateQueryString =
-            "UPDATE Main_Database_For_Directory SET PhoneNumber=@0, Email=@1, StreetAddress=@2, County=@3, Country=@4, PostalCode=@5, ServicesOffered=@6, TypeOfOrganization=@7 WHERE Organization=@8";
+            "UPDATE Main_Database_For_Directory SET Organization=@0, PhoneNumber=@1, Email=@2, StreetAddress=@3, Fax=@4, Facebook=@5, Google=@6, Youtube=@7, Instagram=@8, Pinterest=@9, CharityNavigator=@10, Linkedin=@11, Vimeo=@12, Guidestar=@13, Twitter=@14, ServicesOffered=@15, TypeOfOrganization=@16 WHERE OrgID=@17";
+        Organization = Request["Organization"];
         Phone = Request["Phone"];
         Email = Request["Email"];
         Street = Request["Street"];
-        County = Request["County"];
-        Country = Request["Country"];
-        Postal = Request["Postal"];
+        Fax = Request["Fax"];
+        Facebook = Request["Facebook"];
+        Google = Request["Google"];
+        Youtube = Request["Youtube"];
+        Instagram = Request["Instagram"];
+        Pinterest = Request["Pinterest"];
+        CharityNavigator = Request["CharityNavigator"];
+        Linkedin = Request["Linkedin"];
+        Vimeo = Request["Vimeo"];
+        Guidestar = Request["Guidestar"];
+        Twitter = Request["Twitter"];
         Services = Request["Services"];
         Type = Request["Type"];
-        db.Execute(updateQueryString, Phone, Email, Street, County, Country, Postal, Services, Type, Org);
-        Response.Redirect(@Href("~/List/List"));
+        try
+        {
+
+            db.Execute(updateQueryString, Organization, Phone, Email, Street, Fax, Facebook, Google, Youtube, Instagram, Pinterest, CharityNavigator, Linkedin, Vimeo, Guidestar, Twitter, Services, Type, OrgID);
+            Response.Redirect(@Href("~/List/List"));
+        }
+        catch (Exception ex)
+        {
+            Response.Write("<script>alert('Something went wrong.\\nSome fields may be filled in incorrectly.')</script>");
+        }
+
+
+
     }
     else
     {
-        var selectQueryString = "SELECT * FROM Main_Database_For_Directory WHERE Organization=@0";
+        var selectQueryString = "SELECT * FROM Main_Database_For_Directory WHERE OrgID=@0";
 
-        var row = db.QuerySingle(selectQueryString, Org);
+        var row = db.QuerySingle(selectQueryString, OrgID);
+        Organization = row.Organization;
         Phone = row.PhoneNumber;
         Email = row.Email;
         Street = row.StreetAddress;
-        County = row.County;
-        Country = row.Country;
-        Postal = row.PostalCode;
+        Fax = row.Fax;
+        Facebook = row.Facebook;
+        Google = row.Google;
+        Youtube = row.Youtube;
+        Instagram = row.Instagram;
+        Pinterest = row.Pinterest;
+        CharityNavigator = row.CharityNavigator;
+        Linkedin = row.Linkedin;
+        Vimeo = row.Vimeo;
+        Guidestar = row.Guidestar;
+        Twitter = row.Twitter;
         Services = row.ServicesOffered;
         Type = row.TypeOfOrganization;
     }
@@ -87,7 +126,7 @@
 
                 <div class="col-md-12">
                     <div class=" col-md-offset-1 col-md-2"><label>Organization:</label></div>
-                    <div class="col-md-8"><input class="form-control" name="Org" type="text" size="100" value="@Org" /></div>
+                    <div class="col-md-8"><input class="form-control" name="Organization" type="text" size="100" value="@Organization" /></div>
                 </div>
                 <div class="col-md-12">
                     <div class=" col-md-offset-1 col-md-2"><label>Phone Number:</label></div>
@@ -98,20 +137,52 @@
                     <div class="col-md-8"><input class="form-control" name="Email" type="text" size="100" value="@Email" /></div>
                 </div>
                 <div class="col-md-12">
-                    <div class=" col-md-offset-1 col-md-2"><label>Street Address:</label></div>
+                    <div class=" col-md-offset-1 col-md-2"><label>Address:</label></div>
                     <div class="col-md-8"><input class="form-control" name="Street" type="text" size="100" value="@Street" /></div>
                 </div>
                 <div class="col-md-12">
-                    <div class=" col-md-offset-1 col-md-2"><label>County:</label></div>
-                    <div class="col-md-8"><input class="form-control" name="County" type="text" size="100" value="@County" /></div>
+                    <div class=" col-md-offset-1 col-md-2"><label>Fax:</label></div>
+                    <div class="col-md-8"><input class="form-control" name="Fax" type="text" size="100" value="@Fax" /></div>
                 </div>
                 <div class="col-md-12">
-                    <div class=" col-md-offset-1 col-md-2"><label>Country:</label></div>
-                    <div class="col-md-8"><input class="form-control" name="Country" type="text" size="100" value="@Country" /></div>
+                    <div class=" col-md-offset-1 col-md-2"><label>Facebook:</label></div>
+                    <div class="col-md-8"><input class="form-control" name="Facebook" type="text" size="100" value="@Facebook" /></div>
                 </div>
                 <div class="col-md-12">
-                    <div class=" col-md-offset-1 col-md-2"><label>Postal Code:</label></div>
-                    <div class="col-md-8"><input class="form-control" name="Postal" type="text" size="100" value="@Postal" /></div>
+                    <div class=" col-md-offset-1 col-md-2"><label>Google:</label></div>
+                    <div class="col-md-8"><input class="form-control" name="Google" type="text" size="100" value="@Google" /></div>
+                </div>
+                <div class="col-md-12">
+                    <div class=" col-md-offset-1 col-md-2"><label>Youtube:</label></div>
+                    <div class="col-md-8"><input class="form-control" name="Youtube" type="text" size="100" value="@Youtube" /></div>
+                </div>
+                <div class="col-md-12">
+                    <div class=" col-md-offset-1 col-md-2"><label>Instagram:</label></div>
+                    <div class="col-md-8"><input class="form-control" name="Instagram" type="text" size="100" value="@Instagram" /></div>
+                </div>
+                <div class="col-md-12">
+                    <div class=" col-md-offset-1 col-md-2"><label>Pinterest:</label></div>
+                    <div class="col-md-8"><input class="form-control" name="Pinterest" type="text" size="100" value="@Pinterest" /></div>
+                </div>
+                <div class="col-md-12">
+                    <div class=" col-md-offset-1 col-md-2"><label>Charity Navigator:</label></div>
+                    <div class="col-md-8"><input class="form-control" name="CharityNavigator" type="text" size="100" value="@CharityNavigator" /></div>
+                </div>
+                <div class="col-md-12">
+                    <div class=" col-md-offset-1 col-md-2"><label>Linkedin:</label></div>
+                    <div class="col-md-8"><input class="form-control" name="Linkedin" type="text" size="100" value="@Linkedin" /></div>
+                </div>
+                <div class="col-md-12">
+                    <div class=" col-md-offset-1 col-md-2"><label>Vimeo:</label></div>
+                    <div class="col-md-8"><input class="form-control" name="Vimeo" type="text" size="100" value="@Vimeo" /></div>
+                </div>
+                <div class="col-md-12">
+                    <div class=" col-md-offset-1 col-md-2"><label>Guidestar:</label></div>
+                    <div class="col-md-8"><input class="form-control" name="Guidestar" type="text" size="100" value="@Guidestar" /></div>
+                </div>
+                <div class="col-md-12">
+                    <div class=" col-md-offset-1 col-md-2"><label>Twitter:</label></div>
+                    <div class="col-md-8"><input class="form-control" name="Twitter" type="text" size="100" value="@Twitter" /></div>
                 </div>
                 <div class="col-md-12">
                     <div class=" col-md-offset-1 col-md-2"><label>Services Offered:</label></div>
