--- a/seniorDesign/Views/List/List.cshtml
+++ b/seniorDesign/Views/List/List.cshtml
@@ -17,14 +17,18 @@
 @{ 
     var db = Database.Open("gen-provider-dbConnectionString");
     var selectQueryString = "SELECT * FROM Comment_Table";
-    var queryString = "SELECT * FROM Main_Database_For_Directory where ApprovedForDirectory='true'";
+    var queryString = "SELECT * FROM Main_Database_For_Directory where ApprovedForDirectory='true' order by Organization";
     var rows = db.Query(selectQueryString);
+
     
+
 }
   
-
-
+<html>
+<head>
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
 <link rel="stylesheet" href="/resources/demos/style.css">
 
 
@@ -32,184 +36,197 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+@*<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">*@
 
+</head>
+<body>
 <div class="jumbotron">
     <h2>Search</h2>
     <p class="lead">Search through list of providers.</p>
+    
 </div>
 
 <div class="panel panel-primary">
-  <!-- Default panel contents -->
-  <div class="panel-heading" id="title"></div>
+    <!-- Default panel contents -->
+    <div class="panel-heading" id="title"></div>
 
 
-<div style="overflow: scroll; max-height: 360px;">    
-  <!-- Table -->
-<table id="myTable" class="table table-striped table-hover table-bordered" data-show-refresh="true" data-toggle="table" data-search="true" data-pagination="true" data-filter-control="true" data-sort-order="desc" >
-	<thead>
-      <tr>
-		<th></th>
-        <th></th>
-		<th>Verify</th>
-        <th>Organization</th>
-        <th>Address</th>
-        <th>County</th>
-        <th>Country</th>
-        <th>Postal Code</th>
-		<th>Phone</th>
-        <th>Email</th>
-		<th>Services</th>
-        <th>Authority</th>
-      </tr>
-	  <tr>
-		<th></th>
-        <th></th>
-		<th></th>
-		<th>
-			<div class="form-group has-feedback">
-            <input type="text" id="org" onkeyup="search(3)" class="form-control" />
-            <i class="glyphicon glyphicon-search form-control-feedback"></i>
-            </div>
-		</th>
-        <th>
-            <div class="form-group has-feedback">
-            <input type="text" id="address" onkeyup="search(4)" class="form-control" />
-            <i class="glyphicon glyphicon-search form-control-feedback"></i>
-            </div>
-        </th>
-        <th>
-            <div class="form-group has-feedback">
-                <input type="text" id="county" onkeyup="search(5)" class="form-control" />
-                <i class="glyphicon glyphicon-search form-control-feedback"></i>
-            </div>
-        </th>
-        <th>
-            <div class="form-group has-feedback">
-                <input type="text" id="country" onkeyup="search(6)" class="form-control" />
-                <i class="glyphicon glyphicon-search form-control-feedback"></i>
-            </div>
-        </th>
-        <th>
-            <div class="form-group has-feedback">
-                <input type="text" id="postal" onkeyup="search(7)" class="form-control" />
-                <i class="glyphicon glyphicon-search form-control-feedback"></i>
-            </div>
-        </th>
-        <th>
-            <div class="form-group has-feedback">
-            <input type="text" id="phone" onkeyup="search(8)" class="form-control" />
-            <i class="glyphicon glyphicon-search form-control-feedback"></i>
-            </div>
-        </th>
-		<th>
-            <div class="form-group has-feedback">
-            <input type="text" id="email" onkeyup="search(9)" class="form-control" />
-            <i class="glyphicon glyphicon-search form-control-feedback"></i>
-            </div>
-        </th>
-		<th>
-            <div class="form-group has-feedback">
-            <input type="text" id="services" onkeyup="search(10)" class="form-control" />
-            <i class="glyphicon glyphicon-search form-control-feedback"></i>
-            </div>
-        </th>
-		<th>
-            <div class="form-group has-feedback">
-            <input type="text" id="authority" onkeyup="search(11)" class="form-control" />
-            <i class="glyphicon glyphicon-search form-control-feedback"></i>
-            </div>
-        </th>
+    <div style="overflow: scroll; max-height: 360px;">
+        <!-- Table -->
+        <table id="myTable" class="table table-striped table-hover table-bordered" data-show-refresh="true" data-toggle="table" data-search="true" data-pagination="true" data-filter-control="true" data-sort-order="desc">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th>Verify</th>
+                    <th>Organization</th>
+                    <th>Address</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                    <th>Fax</th>
+                    <th>Services</th>
+                    <th>Authority</th>
+                    <th>Websites</th>
+                </tr>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th>
+                        <div class="form-group has-feedback">
+                            <input type="text" id="org" onkeyup="search(3)" class="form-control" />
+                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                        </div>
+                    </th>
+                    <th>
+                        <div class="form-group has-feedback">
+                            <input type="text" id="address" onkeyup="search(4)" class="form-control" />
+                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                        </div>
+                    </th>
+                    <th>
+                        <div class="form-group has-feedback">
+                            <input type="text" id="email" onkeyup="search(5)" class="form-control" />
+                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                        </div>
+                    </th>
+                    <th>
+                        <div class="form-group has-feedback">
+                            <input type="text" id="phone" onkeyup="search(6)" class="form-control" />
+                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                        </div>
+                    </th>
+                    <th>
+                        <div class="form-group has-feedback">
+                            <input type="text" id="fax" onkeyup="search(7)" class="form-control" />
+                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                        </div>
+                    </th>
+                    
+                    <th>
+                        <div class="form-group has-feedback">
+                            <input type="text" id="services" onkeyup="search(8)" class="form-control" />
+                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                        </div>
+                    </th>
+                    <th>
+                        <div class="form-group has-feedback">
+                            <input type="text" id="authority" onkeyup="search(9)" class="form-control" />
+                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                        </div>
+                    </th>
+                    <th></th>
 
-      </tr>
-    </thead>
-	<tbody>
-     @foreach (var row in db.Query(queryString))
-     {
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var row in db.Query(queryString))
+                {
 
-        <tr>
-            
-            <td><a href="@Href("~/Delete/Delete?param1="+ row.Organization)" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span></a></td>
+                    var posRev = db.QueryValue("select count(*) from Comment_Table where Verified = 'true' and OrgID='" + row.OrgID + "'");
+                    var allRev = db.QueryValue("select count(*) from Comment_Table where OrgID='" + row.OrgID + "'");
+                    var num = Convert.ToDecimal(posRev);
+                    var den = Convert.ToDecimal(allRev);
+                    var rating = 0;
+                    if (Convert.ToInt16(den) != 0)
+                    {
+                        rating = Convert.ToInt16((num / den) * 100);
+                    }
+                    var style = (rating >= 75) ? "btn btn-success" : "btn btn-danger";
+                    if(allRev == 0)
+                    {
+                        style = "btn btn-default";
+                    }
 
-            <td><a href="@Href("~/Edit/Edit?param1="+ row.Organization)" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a></td>
-       
-                
-            <td><a href="@Href("~/Comments/Comments?param1="+ row.Organization)" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span></a></td>
-                
-              
-            <td>@row.Organization</td>
-            <td>@row.StreetAddress</td>
-            <td>@row.County</td>
-            <td>@row.Country</td>
-            <td>@row.PostalCode</td>
-            <td>@row.PhoneNumber</td>
-            <td>@row.Email</td>
-            <td>@row.ServicesOffered</td>
-            <td>@row.TypeOfOrganization</td>
-            
-        </tr>
-     }
+                    var backgroundStyle = (allRev == 0) ? "background-color: #ededed; min-width: 55px; text-align: left" : "min-width: 55px; text-align: left";
+                    <tr>
+
+                        <td><a href="@Href("~/Delete/Delete?param1="+ row.OrgID)" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span></a></td>
+
+                        <td><a href="@Href("~/Edit/Edit?param1="+ row.OrgID)" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a></td>
+
+                        <td><a href="@Href("~/Comments/Comments?param1="+ row.OrgID)" style="@backgroundStyle" class="@style"> @rating% </a></td>
+                        
+                        
+                        <td>@row.Organization</td>
+                        <td>@row.StreetAddress</td>
+                        <td>@row.Email</td>
+                        <td>@row.PhoneNumber</td>
+                        <td>@row.Fax</td>       
+                        <td>@row.ServicesOffered</td>
+                        <td>@row.TypeOfOrganization</td>
+                        <td><a href="@Href("~/ShowAll/ShowAll?param1="+ row.OrgID)" class="btn btn-default"><span class="glyphicon glyphicon-circle-arrow-right"></span></a></td>
 
 
-	</tbody>
+                    </tr>
 
-  </table>
-</div>
+                }
+
+
+            </tbody>
+
+        </table>
+    </div>
 </div>
 
 <div class="modal fade" id="comments" role="dialog">
     <div class="modal-dialog">
-    
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" style="margin-left: 7px" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title" id="commentTitle"></h4>
-        </div>
-        <div class="modal-body">
-     
-		  <ul class="list-group" id="listOfComments" style="overflow: scroll; max-height: 150px; width: 100%;">
-			@foreach (var row in db.Query("SELECT * FROM Comment_Table"))
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" style="margin-left: 7px" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title" id="commentTitle"></h4>
+            </div>
+            <div class="modal-body">
+
+                <ul class="list-group" id="listOfComments" style="overflow: scroll; max-height: 150px; width: 100%;">
+                    @foreach (var row in db.Query("SELECT * FROM Comment_Table"))
             {
                 if (row.Verified == null)
                 {
-                    <li class='list-group-item list-group-item-default'><p> @row.CommentsAboutOrganization </p><small>@row.OrgName</small></li>
-                }
-                else if (row.Verified == true)
-                {
-                    <li class='list-group-item list-group-item-success'><p> @row.CommentsAboutOrganization </p><small>@row.OrgName</small></li>
-                }
-                else if (row.Verified == false)
-                {
-                    <li class='list-group-item list-group-item-danger'><p> @row.CommentsAboutOrganization </p><small>@row.OrgName</small></li>
-                }
+                            <li class='list-group-item list-group-item-default'><p> @row.CommentsAboutOrganization </p><small>@row.OrgName</small></li>
+                        }
+                        else if (row.Verified == true)
+                        {
+                            <li class='list-group-item list-group-item-success'><p> @row.CommentsAboutOrganization </p><small>@row.OrgName</small></li>
+                        }
+                        else if (row.Verified == false)
+                        {
+                            <li class='list-group-item list-group-item-danger'><p> @row.CommentsAboutOrganization </p><small>@row.OrgName</small></li>
+                        }
 
-            }
-		  </ul>
-          <hr/>
-		<div style="background-color: #eeeeee; padding: 7px;">
-		  <h4>Add a Comment:</h4>
-          <textarea class="form-control" rows="2" id="commentBox"></textarea>
+                    }
+                </ul>
+                <hr />
+                <div style="background-color: #eeeeee; padding: 7px;">
+                    <h4>Add a Comment:</h4>
+                    <textarea class="form-control" rows="2" id="commentBox"></textarea>
 
-		  <label for="commentName" style="padding-top:4px">Your Organization Name:</label>
-          <input class="form-control" id="commentName">
-		  <label style="padding-top:4px">Rate: </label>
-		  <br/>
-				
-		  <button class="btn btn-default" id="likeBtn" onclick="chooseRating(0)"><b><span class="glyphicon glyphicon-thumbs-up"></span></b></button>
-          <button class="btn btn-default" id="dislikeBtn" onclick="chooseRating(1)"><b><span class="glyphicon glyphicon-thumbs-down"></span></b></button>
-          <br/>
-		  <br/>
-		  <button class="btn btn-default" style="margin-top: 5px">Add</button>
+                    <label for="commentName" style="padding-top:4px">Your Organization Name:</label>
+                    <input class="form-control" id="commentName">
+                    <label style="padding-top:4px">Rate: </label>
+                    <br />
+
+                    <button class="btn btn-default" id="likeBtn" onclick="chooseRating(0)"><b><span class="glyphicon glyphicon-thumbs-up"></span></b></button>
+                    <button class="btn btn-default" id="dislikeBtn" onclick="chooseRating(1)"><b><span class="glyphicon glyphicon-thumbs-down"></span></b></button>
+                    <br />
+                    <br />
+                    <button class="btn btn-default" style="margin-top: 5px">Add</button>
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" onclick="chooseRating(2)" data-dismiss="modal">Close</button>
+            </div>
         </div>
-		</div>
-		
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" onclick="chooseRating(2)" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-      
+
     </div>
-  </div>	
+</div>
+</body>
+</html>
 
 <script>
 
@@ -301,26 +318,21 @@ function search(col) {
     input = document.getElementById("address");
   }
   else if(col == 5){
-    input = document.getElementById("county");
+    input = document.getElementById("email");
   }
   else if(col == 6){
-    input = document.getElementById("country");
-  }
-  else if(col == 7){
-    input = document.getElementById("postal");
-  }
-  else if(col == 8){
     input = document.getElementById("phone");
   }
+  else if(col == 7){
+    input = document.getElementById("fax");
+  }
+  else if(col == 8){
+    input = document.getElementById("services");
+  }
   else if (col == 9) {
-      input = document.getElementById("email");
-  }
-  else if (col == 10) {
-      input = document.getElementById("services");
-  }
-  else if (col == 11) {
       input = document.getElementById("authority");
   }
+  
 
   filter = input.value.toUpperCase();
   table = document.getElementById("myTable");
