mapping feature fixed

--- a/seniorDesign/Views/Edit/Edit.cshtml
+++ b/seniorDesign/Views/Edit/Edit.cshtml
@@ -113,7 +113,7 @@
 <body>
     <div class="jumbotron">
         <h2>Edit Providers </h2>
-        <p class="lead">Manually add or edit providers.</p>
+        <p class="lead">Request to edit providers.</p>
     </div>
 
 
