--- a/seniorDesign/Views/Add/Add.cshtml
+++ b/seniorDesign/Views/Add/Add.cshtml
@@ -50,6 +50,8 @@
 
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+<script src="//oss.maxcdn.com/jquery.mask/1.11.4/jquery.mask.min.js"></script>
+
 <style>
     .col-md-12{
         margin-bottom: 5px;
@@ -74,7 +76,7 @@
             </div>
             <div class="col-md-12">
                 <div class=" col-md-offset-1 col-md-2"><label>Phone Number:</label></div>
-                <div class="col-md-8"><input class="form-control" name="Phone" type="text" size="100" value="@Phone" /></div>
+                <div class="col-md-8"><input class="form-control" name="Phone" type="text" size="100" maxlength="15" value="@Phone" /></div>
             </div>
             <div class="col-md-12">
                 <div class=" col-md-offset-1 col-md-2"><label>Email:</label></div>
