--- a/seniorDesign/Views/Home/Index.cshtml
+++ b/seniorDesign/Views/Home/Index.cshtml
@@ -34,12 +34,12 @@
   <div class="col-sm-4">
     <div class="card" style="border: 2px solid gray; padding: 6px; min-height: 175px">
       <div class="card-block">
-        <h4 class="card-title">Edit Providers</h4>
+        <h4 class="card-title">Add Providers</h4>
 		<hr style="margin-top:0px; border-top: 2px solid darkgray" />
-        <p class="card-text">Manually create or add to existing provider's contact information.</p>
+        <p class="card-text">Manually create an existing provider's contact information.</p>
       </div>
 	  <div class="card-footer">
-		<a href="@Url.Action("Add", "Add")" class="btn btn-primary" style="padding-bottom: 5px; bottom: 6px; position: absolute">Edit</a>              
+		<a href="@Url.Action("Add", "Add")" class="btn btn-primary" style="padding-bottom: 5px; bottom: 6px; position: absolute">Add</a>              
       </div>
     </div>
   </div>
