--- a/seniorDesign/Views/Shared/_Layout.cshtml
+++ b/seniorDesign/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 					<li>@Html.ActionLink("Map", "Map", "Map")</li>
                     <li>@Html.ActionLink("Search", "List", "List")</li>
                     <li>@Html.ActionLink("Add Provider", "Add", "Add")</li>
-                    <li>@Html.ActionLink("Admin", "Admin", "Admin")</li>
+                    <li>@Html.ActionLink("Admin", "AdminMain", "AdminMain")</li>
                     
                 </ul>
             </div>
