--- a/seniorDesign/Views/List/List.cshtml
+++ b/seniorDesign/Views/List/List.cshtml
@@ -50,12 +50,14 @@
 
 <div class="panel panel-primary">
     <!-- Default panel contents -->
-    <div class="panel-heading" id="title"></div>
+    <div class="panel-heading" id="title_table">
+
+</div>
 
 
     <div style="overflow: scroll; max-height: 360px;">
         <!-- Table -->
-        <table id="myTable" class="table table-striped table-hover table-bordered" data-show-refresh="true" data-toggle="table" data-search="true" data-pagination="true" data-filter-control="true" data-sort-order="desc">
+        <table id="myTable1" class="table table-striped table-hover table-bordered" data-show-refresh="true" data-toggle="table" data-search="true" data-pagination="true" data-filter-control="true" data-sort-order="desc">
             <thead>
                 <tr>
                     <th></th>
@@ -234,7 +236,7 @@
 
 $(document).ready(function () {
 
-    $(":input").inputmask();
+    //$(":input").inputmask();
 
     updateBadge();
     updateButtonColor();
@@ -243,7 +245,7 @@ $(document).ready(function () {
     });
 
     function updateButtonColor() {
-        table = document.getElementById("myTable");
+        table = document.getElementById("myTable1");
         tr = table.getElementsByTagName("tr");
 
         // Loop through all table rows, and hide those who don't match the search query
@@ -298,13 +300,13 @@ function chooseRating(rating){
 
 function updateBadge(){
 
-    table = document.getElementById("myTable");
+    table = document.getElementById("myTable1");
     tr = table.getElementsByTagName("tr");
     var i = tr.length - 2;
-    $("#title").html('<span>Directory of Providers </span><span class="badge"> '+i+'</span>');
+    $("#title_table").html('<span>Directory of Providers </span><span class="badge"> '+i+'</span>');
 
 
-	$("#commentTitle").html('<span>Comment </span><span style="float: right; font-size: 14px"> Verified by: <span class="badge">85%</span></span>');
+	//$("#commentTitle").html('<span>Comment </span><span style="float: right; font-size: 14px"> Verified by: <span class="badge">85%</span></span>');
 
 }
 
@@ -336,7 +338,7 @@ function search(col) {
   
 
   filter = input.value.toUpperCase();
-  table = document.getElementById("myTable");
+  table = document.getElementById("myTable1");
   tr = table.getElementsByTagName("tr");
 
   // Loop through all table rows, and hide those who don't match the search query
