--- a/seniorDesign/Views/Comments/Comments.cshtml
+++ b/seniorDesign/Views/Comments/Comments.cshtml
@@ -13,7 +13,7 @@
     {
         Response.Redirect("~/List/List");
     }
-    //var row = db.QuerySingle("SELECT * FROM Comment_Table WHERE Organization = @0", Org);
+    
     var positiveReviews = db.QuerySingle("SELECT COUNT(*) AS PosRev FROM Comment_Table WHERE Verified = 'true' and OrgID='" + OrgID + "'");
     var posRev = db.QueryValue("select count(*) from Comment_Table where Verified = 'true' and OrgID='"+OrgID+"'");
     var allRev = db.QueryValue("select count(*) from Comment_Table where OrgID='"+OrgID+"'");
@@ -61,12 +61,6 @@
     <link rel="stylesheet" href="/resources/demos/style.css">
 
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <title>Comments</title>
 </head>
 <body>
@@ -85,15 +79,15 @@
             {
                 if (row1.Verified == null)
                 {
-                    <li class='list-group-item list-group-item-default'><p><b style="font-size: 20px">"</b> @row1.CommentsAboutOrganization <b style="font-size: 20px">"</b></p><small><span class="glyphicon glyphicon-user"></span> @row1.OrgName</small></li>
+                    <li class='list-group-item list-group-item-default'><p><b style="font-size: 20px">"</b> @row1.CommentsAboutOrganization <b style="font-size: 20px">"</b></p><small><span class="fa fa-user"></span> @row1.OrgName</small></li>
                 }
                 else if (row1.Verified == true)
                 {
-                    <li class='list-group-item list-group-item-success'><p><b style="font-size: 20px">"</b> @row1.CommentsAboutOrganization <b style="font-size: 20px">"</b></p><small><span class="glyphicon glyphicon-user"></span> @row1.OrgName</small></li>
+                    <li class='list-group-item list-group-item-success'><p><b style="font-size: 20px">"</b> @row1.CommentsAboutOrganization <b style="font-size: 20px">"</b></p><small><span class="fa fa-user"></span> @row1.OrgName</small></li>
                 }
                 else if (row1.Verified == false)
                 {
-                    <li class='list-group-item list-group-item-danger'><p><b style="font-size: 20px">"</b> @row1.CommentsAboutOrganization <b style="font-size: 20px">"</b></p><small><span class="glyphicon glyphicon-user"></span> @row1.OrgName</small></li>
+                    <li class='list-group-item list-group-item-danger'><p><b style="font-size: 20px">"</b> @row1.CommentsAboutOrganization <b style="font-size: 20px">"</b></p><small><span class="fa fa-user"></span> @row1.OrgName</small></li>
                 }
 
             }
@@ -110,8 +104,8 @@
                     <label style="padding-top:4px">Rate: </label>
                     <br />
 
-                    <button class="btn btn-default" id="likeBtn" onclick="chooseRating(1)"><b><span class="glyphicon glyphicon-thumbs-up"></span></b></button>
-                    <button class="btn btn-default" id="dislikeBtn" onclick="chooseRating(0)"><b><span class="glyphicon glyphicon-thumbs-down"></span></b></button>
+                    <button class="btn btn-default" id="likeBtn" onclick="chooseRating(1)"><b><span class="fa fa-thumbs-up"></span></b></button>
+                    <button class="btn btn-default" id="dislikeBtn" onclick="chooseRating(0)"><b><span class="fa fa-thumbs-down"></span></b></button>
                     <input id="Verified" name="Verified" style="display: none" value="@Verified" />
                     <br />
                     
