--- a/seniorDesign/Views/Shared/_Layout.cshtml
+++ b/seniorDesign/Views/Shared/_Layout.cshtml
@@ -9,55 +9,54 @@
     <title>GEN Provider Directory</title>
 
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-
     <link rel="stylesheet" href="/resources/demos/style.css">
-
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
 </head>
 
 <body style="padding-top: 70px;">
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-				<a href="@Url.Action("Index", "Home")" ><span class="glyphicon glyphicon-globe" style="color: LightGray; padding: 4px; font-size: 40px; float: left;"></span></a>              
-				@Html.ActionLink("Provider Directory", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-				
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="@Url.Action("Index", "Home")"><span class="glyphicon glyphicon-home" style="font-size: 10px; padding: 4px; float: left;"></span>  Home </a> </li>
-                    <li><a href="@Url.Action("Map", "Map")"><span class="glyphicon glyphicon-map-marker" style="font-size: 10px; padding: 4px; float: left;"></span>  Map </a> </li>
-                    <li><a href="@Url.Action("List", "List")"><span class="glyphicon glyphicon-search" style="font-size: 10px; padding: 4px; float: left;"></span>  Search </a> </li>
-                    <li><a href="@Url.Action("Add", "Add")"><span class="glyphicon glyphicon-plus" style="font-size: 10px; padding: 4px; float: left;"></span>  Add Provider </a> </li>
-                    <li><a href="@Url.Action("AdminMain", "AdminMain")"><span class="glyphicon glyphicon-cog" style="font-size: 10px; padding: 4px; float: left;"></span>  Admin </a> </li>
-                    
-                </ul>
-            </div>
+    <nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse fixed-top">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="@Url.Action("Index", "Home")"><img src="~/Content/gen_logo.jpg" width="110" height="45" alt="" style="border:3px solid white">
+</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Index", "Home")" style="font-size:14px; margin-right: 5px"> Home </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Map", "Map")" style="font-size:14px; margin-right: 5px">  Map </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("List", "List")" style="font-size:14px; margin-right: 5px">  Search </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Add", "Add")" style="font-size:14px; margin-right: 5px">  Add Provider </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("AdminMain", "AdminMain")" style="font-size:14px; margin-right: 5px">  Admin </a>
+                </li>
+            </ul>
         </div>
-    </div>
+    </nav>
+
+   
 
     <div class="container body-content">
         @RenderBody()
         <hr />
 
     </div>
-
-    <script src="/js/jquery-3.0.0.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
 
     @RenderSection("scripts", required: false)
 </body>
